<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MStudent</string>
    <string name="home">Home</string>
    <string name="harmonogram">Harmonogram</string>
    <string name="grade">Oceny</string>
    <string name="materials">Materiały</string>
    <string name="message">Wiadomość</string>
    <string name="user">Użytkownik:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Wyloguj</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Mstudent</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_intro">Intro</string>
    <string name="register_title">Rejestracja</string>
    <string name="login_title">Logowanie</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="email">Email</string>
    <string name="specialiaztion">Przedmiot</string>
    <string name="specializationGroup">Grupa</string>
    <string name="pwd">Hasło</string>
    <string name="btnRegister">Zarejestruj</string>
    <string name="downloadButton">Pobierz</string>
    <string name="introText">MStudent</string>
    <string name="hello_world">Hello world!</string>
    <string name="day">Dzień tygodnia</string>
    <string name="title_activity_harmonogram">Harmonogram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="courseSpinnerGroup">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

//documents string
    <string name="infoDocuments">Materiały związane z przedmiotem: </string>
    <string name="titleExpandableListView">Materiały</string>




</resources>
